--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.2",
+    "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.11.1",
+    "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
