--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.2",
     "flatpickr": "^4.6.6",
+    "flickity": "^2.2.1",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.11.1",
     "places.js": "^1.19.0",
